--- a/Exercise5A_Farm/Exercise5A_Farm.csproj
+++ b/Exercise5A_Farm/Exercise5A_Farm.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chicken.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Farm.cs" />
+    <Compile Include="MilkCow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sheep.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
